<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_main"
        android:fitsSystemWindows="true"
        tools:context=".SignUp">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/sign_up_text"
            android:textColor="#1a2140"
            android:textSize="50dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:background="#25ffffff"
            android:hint="@string/name_label_text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#1a2140"
            android:textColorHint="#1a2140" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthDay"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:background="#25ffffff"
            android:hint="@string/username_label_text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#1a2140"
            android:textColorHint="#1a2140" />

        <EditText
            android:id="@+id/passWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:background="#25ffffff"
            android:hint="@string/pwd_label_text"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#1a2140"
            android:textColorHint="#1a2140" />

        <CheckBox
            android:id="@+id/tersAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passWord"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/terms_and_conditions_text"

            android:textColor="#1a2140" />

        <EditText
            android:id="@+id/birthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:background="#25ffffff"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/dob_label_text"
            android:minHeight="48dp"
            android:onClick="selectBirthday"
            android:padding="10dp"
            android:textColor="#1a2140"
            android:textColorHint="#1a2140" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tersAndConditions"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="#1a2140"
            android:onClick="signUpButtonClicked"
            android:text="@string/sign_up_btn_text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/createNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:onClick="signInIntoExisting"
            android:text="@string/login_into_existing_account"
            android:textColor="#1a2140" />
    </RelativeLayout>
    <!--    </ScrollView>-->
</RelativeLayout>
