<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="75dp"
        android:gravity="center"
        android:text="@string/sign_in_text"
        android:textColor="#1a2140"
        android:textSize="50dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:background="#25ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="25dp"
        android:hint="@string/sign_in_username_text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#1a2140"
        android:textColorHint="#1a2140" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="50dp"
        android:background="#25ffffff"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="25dp"
        android:hint="@string/sign_in_password_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#1a2140"
        android:textColorHint="#1a2140" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passWord"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#1a2140"
        android:onClick="loginButtonClicked"
        android:text="@string/login_btn_text"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/createNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:minHeight="48dp"
        android:onClick="createNewAccount"
        android:text="@string/create_new_account_text"
        android:textColor="#1a2140" />


</RelativeLayout>
